--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
-	<properties>
+      
+	  <properties>
 		<java.version>17</java.version>
+		 <version.httpclient>4.5.8</version.httpclient>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -75,6 +77,19 @@
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
 </dependency>
+
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+		</dependency>
+
+         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${version.httpclient}</version>
+            <scope>provided</scope>
+        </dependency>
+
 	</dependencies>
 
 	<build>
