--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
       
 	  <properties>
 		<java.version>17</java.version>
-		 <version.httpclient>4.5.8</version.httpclient>
+		  <version.httpclient>5.3</version.httpclient>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -91,7 +91,7 @@
 
          <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
+            <artifactId>httpclient5</artifactId>
             <version>${version.httpclient}</version>
             <scope>provided</scope>
         </dependency>
