--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,8 @@
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.68</version>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>1.77</version>
 		</dependency>
 
 		<dependency>
@@ -90,7 +90,7 @@
 		</dependency>
 
          <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
+            <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
             <version>${version.httpclient}</version>
             <scope>provided</scope>
